objects/PipelineChase__c.object
<CustomObject>
    <description>受注予定会議で営業PLの履歴を管理
主にAIが利用</description>
    <fields>
        <fullName>Field10__c</fullName>
        <label>客先希望納期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>予算額</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <inlineHelpText>（旧）予算判明時期</inlineHelpText>
        <label>受注予定時期</label>
        <type>Date</type>
    </fields>
    <label>商談追跡</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field1__c</columns>
        <columns>Field3__c</columns>
        <columns>Field24__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Field5__c</columns>
        <columns>Field17__c</columns>
        <columns>Field11__c</columns>
        <columns>Field23__c</columns>
        <columns>Field22__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{00000}</displayFormat>
        <label>商談追跡名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>